--- a/config/leeloo.conf
+++ b/config/leeloo.conf
@@ -23,10 +23,10 @@ CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
 # Uncomment the following line to enable per-key lighting
-# CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Use the STRIP config specific to the LEDs you're using
-# CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
